# merysu-sparkle-backend

./: Dockerfile  README.md  lambda_handler.py  pyproject.toml
adapters/src/services/: EmailSenderAdapter.py  EmailVerifierAdapter.py  TurnstileCaptchaAdapter.py
controllers/src/: app.py
controllers/src/dependencies/: request_quote_dependencies.py
controllers/src/dtos/: quote_request.py
controllers/src/exceptions/: handler_exceptions.py
controllers/src/routes/: quote_request.py
settings/: env_variables.py
templates/: get_admin_email_template.py  get_customer_email_template.py
use_cases/src/quote_request/: input.py  use_case.py
