[tool.poetry]
name = "merysu-sparkle-backend"
version = "0.1.0"

description = ""
authors = [
    "HaroldR23 <ahsro99@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.4,<4.0.0"
fastapi = ">=0.127.0,<0.128.0"
uvicorn = ">=0.40.0,<0.41.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
resend = ">=2.19.0,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
python-dotenv = ">=1.2.1,<2.0.0"
python-multipart = ">=0.0.21,<0.0.22"
slowapi = ">=0.1.9,<0.2.0"
dnspython = "^2.8.0"
mangum = "^0.19.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
